--- a/index.html
+++ b/index.html
@@ -51,6 +51,21 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne1">Wo aktiviere/deaktiere ich meine E-Mail Benachrichtigung?</a>
+                </h4>
+            </div>
+            <div id="collapseOne1" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Zum ändern der E-Mail Benachrichtigungseinstellungen klicken Sie nach dem Login in tiX ganz oben rechts im Eck auf Ihren Namen und anschließend auf "Mein Profil bearbeiten" <br/>
+                    Hier setzen Sie den Haken für E-Mail Benachrichtigungen nach Ihren Wünschen.<br/><br/>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
                     <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTen">Welche Rechte haben die einzelnen Usergruppen?</a>
                 </h4>
             </div>
@@ -58,9 +73,9 @@
                 <div class="panel-body">
                     Brechtigungen der Usergruppen <br/><br/>
                         1 -> Gast -> darf nichts (wird nur intern verwendet)<br/>
-                        2 -> User -> ist der eigentliche "Techniker", darf z.B. neue Ansprechpartner zu Kunden anlegen<br/>
-                        3 -> Poweruser -> kann zusätzlich Kunden und Artikel bearbeiten<br/>
-                        4 -> Admin -> Darf alles Verwalten<br/><br/>
+                        2 -> User -> ist der eigentliche "Techniker", darf z.B. neue Ansprechpartner zu Kunden anlegen.<br/>
+                        3 -> Poweruser -> kann zusätzlich Kunden und Artikel bearbeiten.<br/>
+                        4 -> Admin -> Darf alles Verwalten und Auswertungen einsehen.<br/><br/>
                 </div>
             </div>
         </div>
@@ -111,6 +126,21 @@
                 </div>
             </div>
         </div>
+
+        <div class="faqHeader">Support</div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse5">Wo erhalte ich Support oder Unterstützung?</a>
+                </h4>
+            </div>
+            <div id="collapse5" class="panel-collapse collapse">
+                <div class="panel-body">
+                  Für alle Fragen, wenden Sie sich jederzeit gerne per Mail an info@tix-ticketsystem.de<br/>
+                </div>
+            </div>
+        </div>
+
 
 
         </div>
