--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Wann erhalte ich eine Mail von tiX?</a>
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Wann erhalte ich eine Mail von tiX?</a>
                 </h4>
             </div>
             <div id="collapseOne" class="panel-collapse collapse">
@@ -51,7 +51,7 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion" href="#collapseOne1">Wo aktiviere/deaktiere ich meine E-Mail Benachrichtigung?</a>
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseOne1">Wo aktiviere/deaktiere ich meine E-Mail Benachrichtigung?</a>
                 </h4>
             </div>
             <div id="collapseOne1" class="panel-collapse collapse">
@@ -72,7 +72,7 @@
             <div id="collapseTen" class="panel-collapse collapse">
                 <div class="panel-body">
                     Brechtigungen der Usergruppen <br/><br/>
-                        1 -> Gast -> darf nichts (wird nur intern verwendet)<br/>
+                        1 -> Gast -> darf nichts (wird nur intern verwendet) --> Bitte nicht verwenden.<br/>
                         2 -> User -> ist der eigentliche "Techniker", darf z.B. neue Ansprechpartner zu Kunden anlegen.<br/>
                         3 -> Poweruser -> kann zusätzlich Kunden und Artikel bearbeiten.<br/>
                         4 -> Admin -> Darf alles Verwalten und Auswertungen einsehen.<br/><br/>
