--- a/index.html
+++ b/index.html
@@ -80,6 +80,25 @@
             </div>
         </div>
 
+
+         <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTicketsfinden">Wo finde ich "alte" Tickets zu Kunden?</a>
+                </h4>
+            </div>
+            <div id="collapseTicketsfinden" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Oben rechts im Suchfeld den Kundennamen oder die Kundennummer eingeben. <br/><br/>
+                    Jetzt den Kunden wählen indem auf das "Auge" geklickt wird.<br/>
+                    In der Kundenübersicht nach unten Scrollen und den Reiter "Tickets" aufklapppen <br/>
+                    Hier kann nun auch nach Tickets gesucht werden. <br/><br/>
+                </div>
+            </div>
+        </div>
+
+
+        
         <div class="faqHeader">Administration</div>
 
         <div class="panel panel-default">
