--- a/index.html
+++ b/index.html
@@ -98,6 +98,21 @@
         </div>
 
 
+         <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsegeplanteTickets">Wie funktionieren geplante Tickets?</a>
+                </h4>
+            </div>
+            <div id="collapsegeplanteTickets" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Geplante Tickets werden erstmalig zum "Startdatum" erstellt und anschließend immer im gewählten Turnus.<br/><br/>
+                    z.B. Startdatum: 01.10.2023 --> Turnus monatlich </br>
+                    in diesem Beispiel wird am 01.10.2023 und anschließend am 01.11., 01.12., 01.01. usw. das Ticket erstellt.<br/><br/>
+                </div>
+            </div>
+        </div>
+
         
         <div class="faqHeader">Administration</div>
 
