--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 <div class="panel-body">
                     Brechtigungen der Usergruppen <br/><br/>
                         1 -> Gast -> darf nichts (wird nur intern verwendet) --> Bitte nicht verwenden.<br/>
-                        2 -> User -> ist der eigentliche "Techniker", darf z.B. neue Ansprechpartner zu Kunden anlegen.<br/>
-                        3 -> Poweruser -> kann zusätzlich Kunden und Artikel bearbeiten.<br/>
+                        2 -> User -> ist der eigentliche "Techniker", darf z.B. neue Ansprechpartner zu Kunden anlegen alle Arten von Tickets erstellen.<br/>
+                        3 -> Poweruser -> kann zusätzlich Kunden und Artikel bearbeiten, sowie TAG Arbeitszeiten erfassen anlegen.<br/>
                         4 -> Admin -> Darf alles Verwalten und Auswertungen einsehen.<br/><br/>
                 </div>
             </div>
